// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fix command > base_ts_app (file only) 1`] = `
"info:    @rehearsal/fix<test-version>
[STARTED] Initialize
[SUCCESS] Initialize
[STARTED] Analyzing project dependency graph
[SUCCESS] Analyzing project dependency graph
[STARTED] Infer Types
[DATA] processing file: /src/app.ts
[TITLE] Types Inferred
[TITLE]   2 errors caught by rehearsal
[TITLE]   0 have been fixed by rehearsal
[TITLE]   2 errors need to be fixed manually
[TITLE]     -- 2 ts errors, marked by @ts-expect-error @rehearsal TODO
[TITLE]     -- 0 eslint errors, with details in the report
[SUCCESS] Types Inferred
[SUCCESS]   2 errors caught by rehearsal
[SUCCESS]   0 have been fixed by rehearsal
[SUCCESS]   2 errors need to be fixed manually
[SUCCESS]     -- 2 ts errors, marked by @ts-expect-error @rehearsal TODO
[SUCCESS]     -- 0 eslint errors, with details in the report"
`;

exports[`fix command > base_ts_app (file only) 2`] = `
"// generate a random grid based on a set dimension and random alive/dead cells
export function generateRandomGrid(
  dimensions,
  chars = ['▄', ' ']
) {
  const grid = [];

  // create the grid
  for (let y = 0; y < dimensions[1]; y++) {
    const row = [];
    for (let x = 0; x < dimensions[0]; x++) {
      if (Math.random() > 0.5) {
        row.push(chars[0]);
      } else {
        row.push(chars[1]);
      }
    }

    grid.push(row);
  }

  return grid;
}
"
`;

exports[`fix command > base_ts_app (file only) 3`] = `
"import {
  getLiveNeighborCount,
} from './get-live-neighbor-count.js';

export function applyRules(grid, cellCharState) {
  // clone the grid for the next generation
  const newGrid = grid.map((row) => [...row]);
  // keep track if all of the cells are dead and exit if so
  let totalLiveNeighbors = 0;

  // iterate over each cell, apply the rules and update cell state
  for (let y = 0; y < grid.length; y++) {
    for (let x = 0; x < grid[y].length; x++) {
      const cellState = grid[y][x];
      const liveNeighborCount = getLiveNeighborCount(
        grid,
        [y, x],
        [cellCharState[0], cellCharState[1]]
      );

      totalLiveNeighbors += liveNeighborCount;

      // check the current cell state and apply the rules
      if (cellState === cellCharState[0]) {
        if (liveNeighborCount < 2 || liveNeighborCount > 3) {
          // dead
          newGrid[y][x] = cellCharState[1];
        }

        if (liveNeighborCount == 2 || liveNeighborCount == 3) {
          // alive
          newGrid[y][x] = cellCharState[0];
        }
      } else {
        if (liveNeighborCount == 3) {
          // alive
          newGrid[y][x] = cellCharState[0];
        }
      }
    }
  }

  return [newGrid, totalLiveNeighbors];
}
"
`;

exports[`fix command > base_ts_app (file only) 4`] = `
"// based on a given cell, return the number of live neighbors
export function getLiveNeighborCount(
  grid,
  coords,
  cellCharState
) {
  const [x, y] = coords;

  // 8 neighbors
  const neighbors = [
    [x - 1, y - 1],
    [x - 1, y],
    [x - 1, y + 1],
    [x, y - 1],
    [x, y + 1],
    [x + 1, y - 1],
    [x + 1, y],
    [x + 1, y + 1],
  ];

  // iterate over neighbors
  const liveNeighbors = neighbors.filter(([x, y]) => {
    // handle out of bounds
    if (x < 0 || y < 0 || x >= grid.length || y >= grid.length) {
      return false;
    }

    // if alive add a tally mark
    if (grid[x][y] === cellCharState[0]) {
      return true;
    }
  });

  return liveNeighbors.length;
}
"
`;

exports[`fix command > base_ts_app (file only) 5`] = `
"/*
RULES:
1. Any live cell with fewer than two live neighbours dies, as if by underpopulation.
2. Any live cell with two or three live neighbours lives on to the next generation.
3. Any live cell with more than three live neighbours dies, as if by overpopulation.
4. Any dead cell with exactly three live neighbours becomes a live cell, as if by reproduction.

These rules, which compare the behavior of the automaton to real life, can be condensed into the following:

  Any live cell with two or three live neighbours survives.
  Any dead cell with three live neighbours becomes a live cell.
  All other live cells die in the next generation. Similarly, all other dead cells stay dead.
*/

// @ts-expect-error @rehearsal TODO TS2792: Cannot find module 'node:process'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
import { stdout } from 'node:process';
import { generateRandomGrid } from './gen-random-grid.js';
import { applyRules } from './apply-rules.js';

// basic just grab the args if they exist
// assume the are valid and in the right order
// gridWidth, gridHeight, cellAliveState, cellDeadState
// @ts-expect-error @rehearsal TODO TS2580: Cannot find name 'process'. Do you need to install type definitions for node? Try \`npm i --save-dev @types/node\`.
const [_bin, _file, ...args] = process.argv;

if (!args.length || args.length < 4) {
  throw new Error(
    'You must provide 4 arguments: gridWidth, gridHeight, cellAliveState, cellDeadState'
  );
}

const [gridWidth, gridHeight, cellAliveState, cellDeadState] = args;

// the initial grid to kick things off
const GRID_SEED = generateRandomGrid(
  [parseInt(gridWidth), parseInt(gridHeight)],
  [cellAliveState, cellDeadState]
);

// when to stop
const RUN_LIMIT = 500;
// remove the terminal cursor so the grid renders nicely
stdout.write('\\\\x1b[?25l');

// update the grid recursively on interval
(function update(prevGrid, runTally = 0) {
  // set the stdout cursor to the top left
  stdout.cursorTo(0, 0);

  // write the grid to console
  console.log(\`\\\\n\\\\nGeneration: \${runTally}\`);
  console.table(prevGrid);

  // should we stop running
  if (runTally >= RUN_LIMIT) {
    // put the cursor back
    stdout.write('\\\\x1b[?25h');
    return;
  }

  const [newGrid, totalLiveNeighbors] = applyRules(prevGrid, [cellAliveState, cellDeadState]);

  // if all of the cells are dead, stop running
  if (totalLiveNeighbors === 0) {
    console.log(\`Within \${runTally} generations. All cells are dead\`);
    // put the cursor back
    stdout.write('\\\\x1b[?25h');
    return;
  }

  // add a tally mark
  runTally++;

  // recursively call update again within a fps interval so we can throttle the grid updates
  setTimeout(() => {
    update(newGrid, runTally);
  }, 150);
})(GRID_SEED);
"
`;

exports[`fix command > base_ts_app 1`] = `
"info:    @rehearsal/fix<test-version>
[STARTED] Initialize
[SUCCESS] Initialize
[STARTED] Analyzing project dependency graph
[SUCCESS] Analyzing project dependency graph
[STARTED] Infer Types
[DATA] processing file: /src/get-live-neighbor-count.ts
[DATA] processing file: /src/apply-rules.ts
[DATA] processing file: /src/gen-random-grid.ts
[DATA] processing file: /src/app.ts
[TITLE] Types Inferred
[TITLE]   10 errors caught by rehearsal
[TITLE]   4 have been fixed by rehearsal
[TITLE]   6 errors need to be fixed manually
[TITLE]     -- 6 ts errors, marked by @ts-expect-error @rehearsal TODO
[TITLE]     -- 0 eslint errors, with details in the report
[SUCCESS] Types Inferred
[SUCCESS]   10 errors caught by rehearsal
[SUCCESS]   4 have been fixed by rehearsal
[SUCCESS]   6 errors need to be fixed manually
[SUCCESS]     -- 6 ts errors, marked by @ts-expect-error @rehearsal TODO
[SUCCESS]     -- 0 eslint errors, with details in the report"
`;

exports[`fix command > base_ts_app 2`] = `
"// generate a random grid based on a set dimension and random alive/dead cells
export function generateRandomGrid(
  dimensions: number[],
  chars = ['▄', ' ']
): string[][]  {
  const grid = [];

  // create the grid
  for (let y = 0; y < dimensions[1]; y++) {
    const row = [];
    for (let x = 0; x < dimensions[0]; x++) {
      if (Math.random() > 0.5) {
        row.push(chars[0]);
      } else {
        row.push(chars[1]);
      }
    }

    grid.push(row);
  }

  return grid;
}
"
`;

exports[`fix command > base_ts_app 3`] = `
"import {
  getLiveNeighborCount,
} from './get-live-neighbor-count.js';

// @ts-expect-error @rehearsal TODO TS7006: Parameter 'grid' implicitly has an 'any' type.
export function applyRules(grid, cellCharState) {
  // clone the grid for the next generation
  // @ts-expect-error @rehearsal TODO TS7006: Parameter 'row' implicitly has an 'any' type.
  const newGrid = grid.map((row) => [...row]);
  // keep track if all of the cells are dead and exit if so
  let totalLiveNeighbors = 0;

  // iterate over each cell, apply the rules and update cell state
  for (let y = 0; y < grid.length; y++) {
    for (let x = 0; x < grid[y].length; x++) {
      const cellState = grid[y][x];
      const liveNeighborCount = getLiveNeighborCount(
        grid,
        [y, x],
        [cellCharState[0], cellCharState[1]]
      );

      totalLiveNeighbors += liveNeighborCount;

      // check the current cell state and apply the rules
      if (cellState === cellCharState[0]) {
        if (liveNeighborCount < 2 || liveNeighborCount > 3) {
          // dead
          newGrid[y][x] = cellCharState[1];
        }

        if (liveNeighborCount == 2 || liveNeighborCount == 3) {
          // alive
          newGrid[y][x] = cellCharState[0];
        }
      } else {
        if (liveNeighborCount == 3) {
          // alive
          newGrid[y][x] = cellCharState[0];
        }
      }
    }
  }

  return [newGrid, totalLiveNeighbors];
}
"
`;

exports[`fix command > base_ts_app 4`] = `
"// based on a given cell, return the number of live neighbors
export function getLiveNeighborCount(
  // @ts-expect-error @rehearsal TODO TS7006: Parameter 'grid' implicitly has an 'any' type.
  grid,
  coords: number[] | [any, any],
  // @ts-expect-error @rehearsal TODO TS7006: Parameter 'cellCharState' implicitly has an 'any' type.
  cellCharState
): number  {
  const [x, y] = coords;

  // 8 neighbors
  const neighbors = [
    [x - 1, y - 1],
    [x - 1, y],
    [x - 1, y + 1],
    [x, y - 1],
    [x, y + 1],
    [x + 1, y - 1],
    [x + 1, y],
    [x + 1, y + 1],
  ];

  // iterate over neighbors
  const liveNeighbors = neighbors.filter(([x, y]) => {
    // handle out of bounds
    if (x < 0 || y < 0 || x >= grid.length || y >= grid.length) {
      return false;
    }

    // if alive add a tally mark
    if (grid[x][y] === cellCharState[0]) {
      return true;
    }
  });

  return liveNeighbors.length;
}
"
`;

exports[`fix command > base_ts_app 5`] = `
"/*
RULES:
1. Any live cell with fewer than two live neighbours dies, as if by underpopulation.
2. Any live cell with two or three live neighbours lives on to the next generation.
3. Any live cell with more than three live neighbours dies, as if by overpopulation.
4. Any dead cell with exactly three live neighbours becomes a live cell, as if by reproduction.

These rules, which compare the behavior of the automaton to real life, can be condensed into the following:

  Any live cell with two or three live neighbours survives.
  Any dead cell with three live neighbours becomes a live cell.
  All other live cells die in the next generation. Similarly, all other dead cells stay dead.
*/

// @ts-expect-error @rehearsal TODO TS2792: Cannot find module 'node:process'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
import { stdout } from 'node:process';
import { generateRandomGrid } from './gen-random-grid.js';
import { applyRules } from './apply-rules.js';

// basic just grab the args if they exist
// assume the are valid and in the right order
// gridWidth, gridHeight, cellAliveState, cellDeadState
// @ts-expect-error @rehearsal TODO TS2580: Cannot find name 'process'. Do you need to install type definitions for node? Try \`npm i --save-dev @types/node\`.
const [_bin, _file, ...args] = process.argv;

if (!args.length || args.length < 4) {
  throw new Error(
    'You must provide 4 arguments: gridWidth, gridHeight, cellAliveState, cellDeadState'
  );
}

const [gridWidth, gridHeight, cellAliveState, cellDeadState] = args;

// the initial grid to kick things off
const GRID_SEED = generateRandomGrid(
  [parseInt(gridWidth), parseInt(gridHeight)],
  [cellAliveState, cellDeadState]
);

// when to stop
const RUN_LIMIT = 500;
// remove the terminal cursor so the grid renders nicely
stdout.write('\\\\x1b[?25l');

// update the grid recursively on interval
(function update(prevGrid, runTally = 0) {
  // set the stdout cursor to the top left
  stdout.cursorTo(0, 0);

  // write the grid to console
  console.log(\`\\\\n\\\\nGeneration: \${runTally}\`);
  console.table(prevGrid);

  // should we stop running
  if (runTally >= RUN_LIMIT) {
    // put the cursor back
    stdout.write('\\\\x1b[?25h');
    return;
  }

  const [newGrid, totalLiveNeighbors] = applyRules(prevGrid, [cellAliveState, cellDeadState]);

  // if all of the cells are dead, stop running
  if (totalLiveNeighbors === 0) {
    console.log(\`Within \${runTally} generations. All cells are dead\`);
    // put the cursor back
    stdout.write('\\\\x1b[?25h');
    return;
  }

  // add a tally mark
  runTally++;

  // recursively call update again within a fps interval so we can throttle the grid updates
  setTimeout(() => {
    update(newGrid, runTally);
  }, 150);
})(GRID_SEED);
"
`;

exports[`fix command > ember_js_app_4.11 --mode=single-pass 1`] = `
"info:    @rehearsal/fix<test-version>
[STARTED] Initialize
[SUCCESS] Initialize
[STARTED] Analyzing project dependency graph
[SUCCESS] Analyzing project dependency graph
[STARTED] Infer Types
[DATA] processing file: /app/app.ts
[DATA] processing file: /app/router.ts
[DATA] processing file: /app/adapters/application.ts
[DATA] processing file: /app/components/hello-world.gts
[DATA] processing file: /app/components/jumbo.hbs
[DATA] processing file: /app/components/map.hbs
[DATA] processing file: /app/components/map.ts
[DATA] processing file: /app/components/nav-bar.hbs
[DATA] processing file: /app/components/rental.hbs
[DATA] processing file: /app/components/rentals.hbs
[DATA] processing file: /app/components/rentals.ts
[DATA] processing file: /app/components/share-button.hbs
[DATA] processing file: /app/components/share-button.ts
[DATA] processing file: /app/models/rental.ts
[DATA] processing file: /app/routes/index.ts
[DATA] processing file: /app/routes/rental.ts
[DATA] processing file: /app/serializers/application.ts
[DATA] processing file: /app/services/locale.ts
[DATA] processing file: /app/templates/about.hbs
[DATA] processing file: /app/templates/application.hbs
[DATA] processing file: /app/templates/contact.hbs
[DATA] processing file: /app/templates/index.hbs
[DATA] processing file: /app/templates/rental.hbs
[DATA] processing file: /app/components/rental/detailed.hbs
[DATA] processing file: /app/components/rental/image.hbs
[DATA] processing file: /app/components/rental/image.ts
[DATA] processing file: /app/components/rentals/filter.hbs
[DATA] processing file: /app/components/rentals/filter.ts
[TITLE] Types Inferred
[TITLE]   92 errors caught by rehearsal
[TITLE]   9 have been fixed by rehearsal
[TITLE]   83 errors need to be fixed manually
[TITLE]     -- 27 ts errors, marked by @ts-expect-error @rehearsal TODO
[TITLE]     -- 54 glint errors, with details in the report
[TITLE]     -- 2 eslint errors, with details in the report
[SUCCESS] Types Inferred
[SUCCESS]   92 errors caught by rehearsal
[SUCCESS]   9 have been fixed by rehearsal
[SUCCESS]   83 errors need to be fixed manually
[SUCCESS]     -- 27 ts errors, marked by @ts-expect-error @rehearsal TODO
[SUCCESS]     -- 54 glint errors, with details in the report
[SUCCESS]     -- 2 eslint errors, with details in the report"
`;

exports[`fix command > ember_js_app_4.11 --mode=single-pass 2`] = `
"<div class=\\"map\\">
  <img
    alt=\\"Map image at coordinates {{@lat}},{{@lng}}\\"
    ...attributes
    src={{this.src}}
    width={{@width}}
    height={{@height}}
  />
</div>"
`;

exports[`fix command > ember_js_app_4.11 --mode=single-pass 3`] = `
"import Component from '@glimmer/component';
// @ts-expect-error @rehearsal TODO TS2307: Cannot find module 'super-rentals/config/environment' or its corresponding type declarations.
import ENV from 'super-rentals/config/environment';

const MAPBOX_API = 'https://api.mapbox.com/styles/v1/mapbox/streets-v11/static';

export default class MapComponent extends Component {
  get src() {
    // @ts-expect-error @rehearsal TODO TS2339: Property 'lng' does not exist on type 'Readonly<EmptyObject>'.
    let { lng, lat, width, height, zoom } = this.args;

    let coordinates = \`\${lng},\${lat},\${zoom}\`;
    let dimensions = \`\${width}x\${height}\`;
    let accessToken = \`access_token=\${this.token}\`;

    return \`\${MAPBOX_API}/\${coordinates}/\${dimensions}@2x?\${accessToken}\`;
  }

  get token() {
    return encodeURIComponent(ENV.MAPBOX_ACCESS_TOKEN);
  }
}
"
`;

exports[`fix command > ember_js_app_4.11 --mode=single-pass 4`] = `
"import { inject as service } from '@ember/service';
import Component from '@glimmer/component';

const TWEET_INTENT = 'https://twitter.com/intent/tweet';

export default class ShareButtonComponent extends Component {
  // @ts-expect-error @rehearsal TODO TS2564: Property 'router' has no initializer and is not definitely assigned in the constructor.
  @service router: { currentURL: string | URL };
  // @ts-expect-error @rehearsal TODO TS2564: Property 'locale' has no initializer and is not definitely assigned in the constructor.
  @service locale: { current: () => string };

  get currentURL() {
    return new URL(this.router.currentURL, window.location.origin);
  }

  get shareURL() {
    let url = new URL(TWEET_INTENT);

    // @ts-expect-error @rehearsal TODO TS2345: Argument of type 'URL' is not assignable to parameter of type 'string'. Consider verifying both types, using type assertion: '( this.currentURL as string)', or using type guard: 'if ( this.currentURL instanceof string) { ... }'.
    url.searchParams.set('url', this.currentURL);

    // @ts-expect-error @rehearsal TODO TS2339: Property 'text' does not exist on type 'Readonly<EmptyObject>'.
    if (this.args.text) {
      // @ts-expect-error @rehearsal TODO TS2339: Property 'text' does not exist on type 'Readonly<EmptyObject>'.
      url.searchParams.set('text', this.args.text);
    }

    // @ts-expect-error @rehearsal TODO TS2339: Property 'hashtags' does not exist on type 'Readonly<EmptyObject>'.
    if (this.args.hashtags) {
      // @ts-expect-error @rehearsal TODO TS2339: Property 'hashtags' does not exist on type 'Readonly<EmptyObject>'.
      url.searchParams.set('hashtags', this.args.hashtags);
    }

    // @ts-expect-error @rehearsal TODO TS2339: Property 'via' does not exist on type 'Readonly<EmptyObject>'.
    if (this.args.via) {
      // @ts-expect-error @rehearsal TODO TS2339: Property 'via' does not exist on type 'Readonly<EmptyObject>'.
      url.searchParams.set('via', this.args.via);
    }

    url.searchParams.set('locale', this.locale.current());

    return url;
  }
}
"
`;

exports[`fix command > ember_js_app_4.11 --mode=single-pass 5`] = `
"import Model, { attr } from '@ember-data/model';

const COMMUNITY_CATEGORIES = ['Condo', 'Townhouse', 'Apartment'];

export default class RentalModel extends Model {
  // @ts-expect-error @rehearsal TODO TS7008: Member 'title' implicitly has an 'any' type.
  @attr title;
  // @ts-expect-error @rehearsal TODO TS7008: Member 'owner' implicitly has an 'any' type.
  @attr owner;
  // @ts-expect-error @rehearsal TODO TS7008: Member 'city' implicitly has an 'any' type.
  @attr city;
  // @ts-expect-error @rehearsal TODO TS7008: Member 'location' implicitly has an 'any' type.
  @attr location;
  // @ts-expect-error @rehearsal TODO TS2564: Property 'category' has no initializer and is not definitely assigned in the constructor.
  @attr category: string;
  // @ts-expect-error @rehearsal TODO TS7008: Member 'image' implicitly has an 'any' type.
  @attr image;
  // @ts-expect-error @rehearsal TODO TS7008: Member 'bedrooms' implicitly has an 'any' type.
  @attr bedrooms;
  // @ts-expect-error @rehearsal TODO TS7008: Member 'description' implicitly has an 'any' type.
  @attr description;

  get type() {
    if (COMMUNITY_CATEGORIES.includes(this.category)) {
      return 'Community';
    } else {
      return 'Standalone';
    }
  }
}
"
`;

exports[`fix command > ember_js_app_4.11 --mode=single-pass 6`] = `
"import Component from \\"@glimmer/component\\";

export interface PrintDateSignature {
  Args: {};
}

export class PrintDate extends Component<PrintDateSignature> {
  <template>
    <span>{{@month}} {{@day}}, {{@year}}</span>
  </template>
}

interface ProfileSummarySignature {
  Args: {};
}

/**
 * @extends {Component<ProfileSummarySignature>}
 */
export class ProfileSummary extends Component<ProfileSummarySignature> {
  name = \\"Bob\\";

  <template>
    <PrintDate @year={{2023}} @month={{\\"January\\"}} @day={{1}} />
    <span>Hello, I am {{this.name}} and I am {{@age}} years old!</span>
    <span>My favorite snack is {{@snack}}.</span>
  </template>
}

export interface HelloWorldCommentSignature {
  Args: {};
}

interface HelloWorldCommentSignature {
  // @ts-expect-error @rehearsal TODO TS2304: Cannot find name 'HelloWorldCommentArgs'.
  Args: HelloWorldCommentArgs;
}

/**
 // @ts-expect-error @rehearsal TODO TS80009: JSDoc typedef may be converted to TypeScript type.
 * @typedef HelloWorldCommentArgs
 * @property {number} age - years since date of birth
 * @property {string} snack - a food to eat between meals
 * @property {string} talent - some talent not on profile
 */

/**
 * @extends {Component<HelloWorldCommentSignature>}
 */
export default class HelloWorld extends Component<HelloWorldCommentSignature> {
  name = \\"world\\";

  <template>
    <ProfileSummary @age={{@age}} @snack={{@snack}} />
    My talent is
    {{@talent}}
  </template>
}
"
`;

exports[`fix command > ember_js_app_4.11 1`] = `
"info:    @rehearsal/fix<test-version>
[STARTED] Initialize
[SUCCESS] Initialize
[STARTED] Analyzing project dependency graph
[SUCCESS] Analyzing project dependency graph
[STARTED] Infer Types
[DATA] processing file: /app/app.ts
[DATA] processing file: /app/router.ts
[DATA] processing file: /app/adapters/application.ts
[DATA] processing file: /app/components/hello-world.gts
[DATA] processing file: /app/components/jumbo.hbs
[DATA] processing file: /app/components/map.hbs
[DATA] processing file: /app/components/map.ts
[DATA] processing file: /app/components/nav-bar.hbs
[DATA] processing file: /app/components/rental.hbs
[DATA] processing file: /app/components/rentals.hbs
[DATA] processing file: /app/components/rentals.ts
[DATA] processing file: /app/components/share-button.hbs
[DATA] processing file: /app/components/share-button.ts
[DATA] processing file: /app/models/rental.ts
[DATA] processing file: /app/routes/index.ts
[DATA] processing file: /app/routes/rental.ts
[DATA] processing file: /app/serializers/application.ts
[DATA] processing file: /app/services/locale.ts
[DATA] processing file: /app/templates/about.hbs
[DATA] processing file: /app/templates/application.hbs
[DATA] processing file: /app/templates/contact.hbs
[DATA] processing file: /app/templates/index.hbs
[DATA] processing file: /app/templates/rental.hbs
[DATA] processing file: /app/components/rental/detailed.hbs
[DATA] processing file: /app/components/rental/image.hbs
[DATA] processing file: /app/components/rental/image.ts
[DATA] processing file: /app/components/rentals/filter.hbs
[DATA] processing file: /app/components/rentals/filter.ts
[TITLE] Types Inferred
[TITLE]   104 errors caught by rehearsal
[TITLE]   31 have been fixed by rehearsal
[TITLE]   73 errors need to be fixed manually
[TITLE]     -- 27 ts errors, marked by @ts-expect-error @rehearsal TODO
[TITLE]     -- 46 glint errors, with details in the report
[TITLE]     -- 0 eslint errors, with details in the report
[SUCCESS] Types Inferred
[SUCCESS]   104 errors caught by rehearsal
[SUCCESS]   31 have been fixed by rehearsal
[SUCCESS]   73 errors need to be fixed manually
[SUCCESS]     -- 27 ts errors, marked by @ts-expect-error @rehearsal TODO
[SUCCESS]     -- 46 glint errors, with details in the report
[SUCCESS]     -- 0 eslint errors, with details in the report"
`;

exports[`fix command > ember_js_app_4.11 2`] = `
"import Component from \\"@glimmer/component\\";

export interface PrintDateSignature {
  Args: { year: any; day: any; month: any };
}

export class PrintDate extends Component<PrintDateSignature> {
  <template>
    <span>{{@month}} {{@day}}, {{@year}}</span>
  </template>
}

interface ProfileSummarySignature {
  Args: { snack: any; age: any };
}

/**
 * @extends {Component<ProfileSummarySignature>}
 */
export class ProfileSummary extends Component<ProfileSummarySignature> {
  name = \\"Bob\\";

  <template>
    <PrintDate @year={{2023}} @month={{\\"January\\"}} @day={{1}} />
    <span>Hello, I am {{this.name}} and I am {{@age}} years old!</span>
    <span>My favorite snack is {{@snack}}.</span>
  </template>
}

interface HelloWorldCommentSignature {
  Args: HelloWorldCommentArgs;
}

interface HelloWorldCommentArgs {
  age: number;
  snack: string;
  talent: string;
}

/**
 * @extends {Component<HelloWorldCommentSignature>}
 */
export default class HelloWorld extends Component<HelloWorldCommentSignature> {
  name = \\"world\\";

  <template>
    <ProfileSummary @age={{@age}} @snack={{@snack}} />
    My talent is
    {{@talent}}
  </template>
}
"
`;

exports[`fix command > glimmerx_js_app 1`] = `
"info:    @rehearsal/fix<test-version>
[STARTED] Initialize
[SUCCESS] Initialize
[STARTED] Analyzing project dependency graph
[SUCCESS] Analyzing project dependency graph
[STARTED] Infer Types
[DATA] processing file: /src/GreetingHeader.ts
[DATA] processing file: /src/App.ts
[DATA] processing file: /src/SimpleComponent.ts
[DATA] processing file: /src/index.ts
[TITLE] Types Inferred
[TITLE]   25 errors caught by rehearsal
[TITLE]   14 have been fixed by rehearsal
[TITLE]   11 errors need to be fixed manually
[TITLE]     -- 1 ts errors, marked by @ts-expect-error @rehearsal TODO
[TITLE]     -- 10 glint errors, with details in the report
[TITLE]     -- 0 eslint errors, with details in the report
[SUCCESS] Types Inferred
[SUCCESS]   25 errors caught by rehearsal
[SUCCESS]   14 have been fixed by rehearsal
[SUCCESS]   11 errors need to be fixed manually
[SUCCESS]     -- 1 ts errors, marked by @ts-expect-error @rehearsal TODO
[SUCCESS]     -- 10 glint errors, with details in the report
[SUCCESS]     -- 0 eslint errors, with details in the report"
`;

exports[`fix command > glimmerx_js_app 2`] = `
"import { renderComponent } from \\"@glimmerx/core\\";
import App from \\"./App\\";

const containerElement = document.getElementById(\\"app\\");

// @ts-expect-error @rehearsal TODO TS2769: No overload matches this call..   Overload 1 of 2, '(ComponentClass: object, options: RenderComponentOptions): Promise<void>', gave the following error..     Argument of type 'HTMLElement | null' is not assignable to parameter of type 'RenderComponentOptions'..       Type 'null' is not assignable to type 'RenderComponentOptions'..   Overload 2 of 2, '(ComponentClass: object, element: HTMLElement): Promise<void>', gave the following error..     Argument of type 'HTMLElement | null' is not assignable to parameter of type 'HTMLElement'..       Type 'null' is not assignable to type 'HTMLElement'.
renderComponent(App, containerElement);
"
`;

exports[`fix command > glimmerx_js_app 3`] = `
"import Component, { hbs, tracked } from \\"@glimmerx/component\\";
import { on, action } from \\"@glimmerx/modifier\\";

import \\"./App.css\\";
import GreetingHeader from \\"./GreetingHeader\\";

/**
 * Formats a name to include \\"the Great and Powerful\\" afterwards. This is
 * a ridiculous helper!
 *
 * @param {string} name the name to format
 * @returns {string} the formatted name
 */
function formatName(name: string): string {
  return \`\${name} the Great and Powerful\`;
}

interface FormattedNameSignature {
  Args: {
    name: string;
  };
}
/** @extends {Component<FormattedNameSignature>} */
class FormattedName extends Component {
  static template = hbs\`
    {{formatName this.args.name}}!
  \`;
}

const I_AM_CONSTANT = \\"and I am a constant\\";

interface ComponentAsArgSignature {
  Args: {
    title: import(\\"@glint/template\\").WithBoundArgs<
      typeof Component<FormattedNameSignature>,
      \\"name\\"
    >;
  };
}
/**
 * @type {import('@glimmerx/component').TemplateComponent<ComponentAsArgSignature>}
 */
const ComponentAsArg: import(\\"@glimmerx/component\\").TemplateComponent<ComponentAsArgSignature> = hbs\`
  <h1>I am {{@title}}</h1>
  {{I_AM_CONSTANT}}
\`;

export default class HelloWorld extends Component {
  static template = hbs\`
    <ComponentAsArg @title={{component FormattedName name=\\"Oz\\"}}/>
    <GreetingHeader @greeting=\\"hello\\"/>
    <IncrementableButton @startCount={{100}}/>
  \`;
}

interface IncrementableButtonSignature {
  Args: {
    startCount: number;
  };
}

/** @extends {Component<IncrementableButtonSignature>} */
class IncrementableButton extends Component {
  /** @type {number} the incrementable count */
  // @ts-expect-error @rehearsal TODO TS2339: Property 'startCount' does not exist on type 'Readonly<EmptyObject>'.
  @tracked count: number = this.args.startCount;

  @action increment() {
    this.count++;
  }

  static template = hbs\`
    <p>You have clicked the button {{this.count}} times.</p>
    <button {{on \\"click\\" this.increment}}>Click</button>
  \`;
}
"
`;

exports[`fix command > glimmerx_js_app 4`] = `
"import Component, { hbs } from \\"@glimmerx/component\\";
import { helper } from \\"@glimmerx/helper\\";

const or = helper(
  /** @param {[a: *, b: *]} param */
  // @ts-expect-error @rehearsal TODO TS80004: JSDoc types may be moved to TypeScript types.
  ([a, b]) => a || b
);

interface GreetingHeaderSignature {
  Args: {
    greeting: string;
    src?: string;
    target?: string;
  };
}

/** @extends {Component<GreetingHeaderSignature>} */
export default class GreetingHeader extends Component {
  static template = hbs\`
    <h1>{{@greeting}}, {{or @target 'glimmerx'}}</h1>
    <img src={{this.src}}/>
    {{@age}}
    {{@onion}}
  \`;

  get src() {
    // @ts-expect-error @rehearsal TODO TS2339: Property 'src' does not exist on type 'Readonly<EmptyObject>'.
    return this.args.src || \\"https://picsum.photos/250\\";
  }
}
"
`;

exports[`fix command > glimmerx_js_app 5`] = `""`;
